Spot-By-Netapp/Spot-Admin/AWS/exercise/exercise-3/HandsonYAML/nginx-file-browser/nginx-file-browser-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/group.name: nginx
    alb.ingress.kubernetes.io/load-balancer-name: handson-eks-alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/tags: Name=handson-eks-alb,owner=handsonadmin
    alb.ingress.kubernetes.io/target-type: instance
  name: handson-eks-alb
  namespace: default
  labels:
    purpose: handson
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - backend:
          service:
            name: handson-eks-alb
            port:
              number: 80
        path: /
        pathType: Prefix
